src/objects/Document__c.object
<CustomObject>
    <description>Contains the description of the attachments</description>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the Attachment</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isPortal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you want to show it on community portal</inlineHelpText>
        <label>isPortal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>